kubernetes/charts/argocd/manifests/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/httproute-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
  hostnames:
    - argocd-10-242-20-170.lab-local.bichls.dev
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
